--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "Paddy Color Theme",
-	"version": "0.6.1",
+	"version": "0.7.1",
 	"publisher": "yile-ou",
+	"author": {
+		"name": "Yile Ou",
+		"email": "troy.yile@gmail.com",
+		"url": "http://yile.art/"
+	},
 	"repository": "https://github.com/troydraws/paddy-color-theme",
 	"engines": {
 		"vscode": "^1.38.0"
@@ -14,9 +19,14 @@
 	"contributes": {
 		"themes": [
 			{
-				"label": "Paddy",
+				"label": "Paddy Dark",
 				"uiTheme": "vs-dark",
 				"path": "./themes/Paddy-color-theme.json"
+			},
+			{
+				"label": "Paddy Medium",
+				"uiTheme": "vs-dark",
+				"path": "./themes/Paddy-medium-color-theme.json"
 			}
 		]
 	},
