--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
-	"description": "Paddy Color Theme",
-  "version": "0.8.0",
+	"description": "A warm and earthy VS Code color theme for all the badass coders 🌲🍁🪓",
+  "version": "0.8.1",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
