--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A warm and earthy VS Code color theme for all the badass coders 🌲🍁🪓",
-  "version": "0.8.1",
+  "version": "0.9.0",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -24,6 +24,11 @@
 				"uiTheme": "vs-dark",
 				"path": "./themes/Paddy-color-theme.json"
 			},
+      {
+        "label": "Paddy Emerald",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Paddy-emerald-color-theme.json"
+      },
 			{
 				"label": "Paddy Medium",
 				"uiTheme": "vs-dark",
