--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A warm and earthy VS Code color theme for all the badass coders 🌲🍁🪓",
-  "version": "0.9.2",
+  "version": "0.9.3",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -29,11 +29,21 @@
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-emerald-color-theme.json"
       },
-			{
-				"label": "Paddy Medium",
-				"uiTheme": "vs-dark",
-				"path": "./themes/Paddy-medium-color-theme.json"
-			}
+      {
+        "label": "Paddy Eggplant",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Paddy-eggplant-color-theme.json"
+      },
+      {
+        "label": "Paddy Mist",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Paddy-mist-color-theme.json"
+      },
+      {
+        "label": "Paddy Yesterday",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Paddy-yesterday-color-theme.json"
+      }
 		]
 	},
 	"__metadata": {
