--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A warm and earthy VS Code color theme for all the badass coders 🌲🍁🪓",
-  "version": "0.9.3",
+  "version": "0.9.4",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -33,6 +33,11 @@
         "label": "Paddy Eggplant",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-eggplant-color-theme.json"
+      },
+      {
+        "label": "Paddy Light",
+        "uiTheme": "vs",
+        "path": "./themes/Paddy-light-color-theme.json"
       },
       {
         "label": "Paddy Mist",
