--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A warm and earthy VS Code color theme for all the badass coders 🌲🍁🪓",
-  "version": "0.9.7",
+  "version": "0.9.8",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -38,6 +38,11 @@
         "label": "Paddy Light",
         "uiTheme": "vs",
         "path": "./themes/Paddy-light-color-theme.json"
+      },
+      {
+        "label": "Paddy Milk",
+        "uiTheme": "vs",
+        "path": "./themes/Paddy-milk-color-theme.json"
       },
       {
         "label": "Paddy Mist",
