--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A warm and vibrant VS Code color theme for all ye badass hackers 🌲🍁🪓",
-  "version": "1.0.0",
+  "version": "1.1.0",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -21,64 +21,150 @@
 	"contributes": {
 		"themes": [
       {
+        "id": "paddy-inkstone",
         "label": "Paddy Inkstone",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-inkstone-color-theme.json"
       },
       {
+        "id": "paddy-eggplant",
         "label": "Paddy Eggplant",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-eggplant-color-theme.json"
       },
       {
+        "id": "paddy-emerald",
         "label": "Paddy Emerald",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-emerald-color-theme.json"
       },
       {
+        "id": "paddy-neptune",
         "label": "Paddy Neptune",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-neptune-color-theme.json"
       },
       {
+        "id": "paddy-frost",
         "label": "Paddy Frost",
         "uiTheme": "vs",
         "path": "./themes/Paddy-frost-color-theme.json"
       },
       {
+        "id": "paddy-light",
         "label": "Paddy Light",
         "uiTheme": "vs",
-        "path": "./themes/Paddy-light-color-theme.json"
+        "path": "./themes/upright/Paddy-light-color-theme.json"
       },
       {
+        "id": "paddy-mist",
         "label": "Paddy Mist",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-mist-color-theme.json"
       },
       {
+        "id": "paddy-yesterday",
         "label": "Paddy Yesterday",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-yesterday-color-theme.json"
       },
       {
+        "id": "paddy-machine",
         "label": "Paddy Machine",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-machine-color-theme.json"
       },
       {
+        "id": "paddy-wolf",
         "label": "Paddy Wolf",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-wolf-color-theme.json"
       },
       {
+        "id": "paddy-dark",
         "label": "Paddy Dark",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-dark-color-theme.json"
       },
       {
+        "id": "paddy-black",
         "label": "Paddy Black",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-black-color-theme.json"
+      },
+
+
+      {
+        "id": "paddy-inkstone-upright",
+        "label": "Upright Paddy Inkstone",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-inkstone-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-eggplant-upright",
+        "label": "Upright Paddy Eggplant",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-eggplant-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-emerald-upright",
+        "label": "Upright Paddy Emerald",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-emerald-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-neptune-upright",
+        "label": "Upright Paddy Neptune",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-neptune-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-frost-upright",
+        "label": "Upright Paddy Frost",
+        "uiTheme": "vs",
+        "path": "./themes/upright/Paddy-frost-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-light-upright",
+        "label": "Upright Paddy Light",
+        "uiTheme": "vs",
+        "path": "./themes/upright/Paddy-light-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-mist-upright",
+        "label": "Upright Paddy Mist",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-mist-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-yesterday-upright",
+        "label": "Upright Paddy Yesterday",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-yesterday-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-machine-upright",
+        "label": "Upright Paddy Machine",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-machine-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-wolf-upright",
+        "label": "Upright Paddy Wolf",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-wolf-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-dark-upright",
+        "label": "Upright Paddy Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-dark-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-black-upright",
+        "label": "Upright Paddy Black",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-black-upright-color-theme.json"
       }
 		]
 	},
