--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
-	"description": "A warm and vibrant VS Code color theme for all ye badass hackers 🌲🍁🪓",
+	"description": "A very detailed color theme with earthy tones and many background options for all ye badass hackers. 🎄🍁🪓",
   "version": "1.1.1",
 	"publisher": "yile-ou",
 	"author": {
