--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A very detailed color theme with earthy tones and many background options for all ye badass hackers. 🎄🍁🪓",
-  "version": "1.2.1",
+  "version": "1.3.0",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -49,6 +49,12 @@
         "label": "P. \\ Neptune",
         "uiTheme": "vs-dark",
         "path": "./themes/Paddy-neptune-color-theme.json"
+      },
+      {
+        "id": "paddy-ox",
+        "label": "P. \\ Ox",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Paddy-ox-color-theme.json"
       },
       {
         "id": "paddy-frost",
@@ -129,6 +135,12 @@
         "label": "P. Upright \\ Neptune",
         "uiTheme": "vs-dark",
         "path": "./themes/upright/Paddy-neptune-upright-color-theme.json"
+      },
+      {
+        "id": "paddy-ox-upright",
+        "label": "P. Upright \\ Ox",
+        "uiTheme": "vs-dark",
+        "path": "./themes/upright/Paddy-ox-upright-color-theme.json"
       },
       {
         "id": "paddy-frost-upright",
