--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
 	"description": "A set of very detailed color theme with earthy tones for all ye badass hackers. 🎄🍁🪓",
-  "version": "1.4.0",
+  "version": "1.4.1",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
@@ -17,7 +17,7 @@
 	"categories": [
 		"Themes" 
   ],
-  "keywords": ["color-theme", "warm", "rainbow", "colorful", "green", "red", "organic", "half-life", "half-life-alyx", "citadel", "teal", "olive", "purple", "brown", "medium gray", "black", "high contrast", "low contrast", "white", "off white", "blue", "navy"],
+  "keywords": ["color-theme", "warm", "rainbow", "colorful", "green", "red", "organic", "half-life", "half-life-alyx", "citadel", "teal", "olive", "purple", "brown", "medium gray", "black", "high contrast", "low contrast", "white", "off white", "blue", "navy", "vintage", "retro", "clean"],
 	"contributes": {
 		"themes": [
       {
