--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,3 +4,5 @@
 vsc-extension-quickstart.md
 .DS_Store
 paddy-color-theme-preview.gif
+themes/default/Paddy-1998-color-theme.json
+themes/upright/Paddy-1998-upright-color-theme.json
